Security update for submissions, using AES & RSA keys