@@ -1,10 +1,12 @@
 package ie.mid.identityengine.security;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.apache.tomcat.util.codec.binary.Base64;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.crypto.Cipher;
+import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -13,15 +15,15 @@ import java.security.spec.X509EncodedKeySpec;
 
 public class DataEncryption {
 
-    private static Logger logger = LogManager.getLogger(DataEncryption.class);
+    private static Logger logger = LoggerFactory.getLogger(DataEncryption.class);
 
     public static String decryptText(String encodedBase64String, String keyString) {
         try {
             logger.debug("Attempting to decrypt text " + encodedBase64String + "\nwith keystring " + keyString);
             encodedBase64String = encodedBase64String.replace("\n","");
             keyString = keyString.replace("\n","");
-            byte[] decodedBase64 = Base64.decodeBase64(encodedBase64String);
-            byte [] keyArray = Base64.decodeBase64(keyString);
+            byte[] decodedBase64 = DatatypeConverter.parseBase64Binary(encodedBase64String);
+            byte[] keyArray = DatatypeConverter.parseBase64Binary(keyString);
             Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
             X509EncodedKeySpec x509EncodedKeySpec = new X509EncodedKeySpec(keyArray);
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
@@ -39,18 +41,56 @@ public class DataEncryption {
             keyString = keyString.replace("\n", "");
             Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-            PrivateKey privateKey = keyFactory.generatePrivate(new PKCS8EncodedKeySpec(Base64.decodeBase64(keyString)));
+            PrivateKey privateKey = keyFactory.generatePrivate(new PKCS8EncodedKeySpec(DatatypeConverter.parseBase64Binary(keyString)));
             cipher.init(Cipher.ENCRYPT_MODE, privateKey);
-            return Base64.encodeBase64String(cipher.doFinal(text.getBytes("UTF-8")));
+            return byteToBase64(cipher.doFinal(text.getBytes("UTF-8")));
         } catch (Exception e) {
             return null;
         }
     }
 
+    public static String encryptTextPublic(String text, String publicKeyString) {
+        try {
+            text = text.replace("\n", "");
+            byte[] keyArray = Base64ToByte(publicKeyString.replace("\n", ""));
+            Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
+            KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+            X509EncodedKeySpec x509EncodedKeySpec = new X509EncodedKeySpec(keyArray);
+            PublicKey publicKey = keyFactory.generatePublic(x509EncodedKeySpec);
+            cipher.init(Cipher.ENCRYPT_MODE, publicKey);
+            return byteToBase64(cipher.doFinal(text.getBytes("UTF-8")));
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    public static String aesEncryption(String text, String aesKey) {
+        try {
+            byte[] key = Base64ToByte(aesKey);
+            SecretKeySpec secretKey = new SecretKeySpec(key, "AES");
+            Cipher cipher = Cipher.getInstance("AES");
+            cipher.init(Cipher.ENCRYPT_MODE, secretKey);
+
+            return byteToBase64(cipher.doFinal(text.getBytes()));
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    public static String aesDecryption(String cipherText, String aesKey) throws Exception {
+        byte[] cipherArray = Base64ToByte(cipherText);
+        byte[] key = Base64ToByte(aesKey);
+        SecretKeySpec secretKey = new SecretKeySpec(key, "AES");
+        Cipher cipher = Cipher.getInstance("AES");
+        cipher.init(Cipher.DECRYPT_MODE, secretKey);
+
+        return byteToBase64(cipher.doFinal(cipherArray));
+    }
+
     public static boolean isInvalidPublicKey(String key) {
         try {
             String testKey = key.replace("\n", "");
-            byte[] keyArray = Base64.decodeBase64(testKey);
+            byte[] keyArray = DatatypeConverter.parseBase64Binary(testKey);
             Cipher cipher = Cipher.getInstance("RSA/ECB/PKCS1Padding");
             X509EncodedKeySpec x509EncodedKeySpec = new X509EncodedKeySpec(keyArray);
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
@@ -60,5 +100,13 @@ public class DataEncryption {
         } catch (Exception e) {
             return true;
         }
+    }
+
+    public static String byteToBase64(byte[] array) {
+        return Base64.encodeBase64String(array);
+    }
+
+    private static byte[] Base64ToByte(String base64) {
+        return Base64.decodeBase64(base64);
     }
 }
